css/site.css
body{
   font-family:Verdana, sans-serif;
}

#hdx-ipc-map {
    height:500px;
    width:100%;
}

#header{
    padding-bottom:20px;
    border-bottom-color: #dddddd;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    margin-bottom:20px;
}

.container{
    padding-bottom:20px;
}

 .margintop20{
    margin-top:20px;
 }

 #loading{
    text-align:center;
 }

 .ipc-info{
    padding:5px;
    background-color:white;
    background: rgba(255,255,255,0.8);
    box-shadow: 0 0 15px rgba(0,0,0,0.2);
    border-radius: 5px;
    color:steelblue;
    font-size:1.5em;
 }

.ipc-active {
    width:150px;
    height:40px;
    border-left: 1px solid #bbb;
    border-top: 1px solid #bbb;
    border-right: 1px solid #bbb;
    border-bottom: 0px solid #bbb;
    display:inline-block;
    border-radius: 5px 5px 0px 0px;
    text-align:center;
    vertical-align:center;
    padding-top:10px;
}

.ipc-inactive {
    width:150px;
    height:40px;
    display:inline-block;
    vertical-align:center;
    text-align:center;
    padding-top:10px;
}
.tab {
    cursor:pointer;
}

.legend {
    line-height: 18px;
    background-color:white;
    background: rgba(255,255,255,0.8);
    box-shadow: 0 0 15px rgba(0,0,0,0.2);
    border-radius: 5px;
    color:steelblue;
    font-size:1em;
    padding:5px;
}
.legend i {
    width: 18px;
    height: 18px;
    float: left;
    margin-right: 8px;
    opacity: 0.7;
}

/*----------BREADCRUMBS-------------*/

#panel-breadcrumbs{
    font-size: 1.5em;
}

.hover-link{
    color:#0080ff;
}

.hover-link:hover{
    color:#26004d;
    cursor: pointer; 
    cursor: hand;
}

/*----------Data Table-------------*/
.nav{
    margin: 2em;
}

#dataTable{
    text-align:center;
    border-collapse: collapse;
    /*display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
    /*display: -ms-flexbox;  /* TWEENER - IE 10 */
    /*display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */*/
    /*display: flex;*/         /* NEW, Spec - Firefox, Chrome, Opera */
    justify-content:space-around;
    margin-bottom: 30px;
    height:500px;
    overflow:auto;
    border-top: solid #e6e6e6 1px;
}

#dataTable tr, td{
    padding: 10px;
    border: solid #e6e6e6 1px;
    font-size: 12px;
}

#dataTable th{
    display: table-cell;
    color:white;
    text-align:center;
    padding: 15px;
    font-weight:200;
    font-family: Calibri, sans-serif;
    background-color: #3973ac;
    border: 	#e6e6e6 solid 1px;
        font-size: 14px;
}

/*#dataTable th:nth-child(even){
    border: #3973ac solid 1px;
    background-color:#3973ac;
}

#dataTable th:nth-child(odd){
    border: 	#304050 solid 1px;
    background-color:	#304050;
}*/


#dataTable th, #dataTable td{
    width: 15em;
}

.dc-chart g.row text{
    fill:black;
}

.dc-table-label{
    font-weight:600;
}

#gapChart, #admin{
    width:100%;
    font-size:10px;
}

#errorText p{
    padding-top: 50px;
}

